Added pop up menu when a country is clicked.

--- a/app/game.html
+++ b/app/game.html
@@ -18,6 +18,7 @@
   <body>
 
 	<div id="map"></div>
+  <div id="info-box">?</div>
 
 	<div class="navbar-wrapper">
 
@@ -42,6 +43,12 @@
           </div>
         </nav>
 
+    </div>
+
+    <div class = "col-lg-3">
+      <ul class="list-group">
+        <li class="list-group-item">Score: <span class="timer"></span></li>
+      </ul>
     </div>
 
 
