--- a/app/index.html
+++ b/app/index.html
@@ -49,11 +49,10 @@
       <!-- Indicators -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="images/logo.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Game Title</h1>
-              <p>Game description.</p>
+            
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Click here to play</a></p>
             </div>
           </div>
@@ -67,12 +66,6 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© 2014 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-      </footer>
 
     </div><!-- /.container -->
 
